--- a/public/esquelet-BotigaInformatica/src/main/resources/static/sass/custom.scss
+++ b/public/esquelet-BotigaInformatica/src/main/resources/static/sass/custom.scss
@@ -31,6 +31,7 @@
 @import "../../../../frontend/node_modules/bootstrap/scss/carousel";
 @import "../../../../frontend/node_modules/bootstrap/scss/containers";
 @import "../../../../frontend/node_modules/bootstrap/scss/badge";
+@import "../../../../frontend/node_modules/bootstrap/scss/forms";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../../../frontend/node_modules/bootstrap/scss/utilities/api";
