feat(css): updated sass to get more features

--- a/public/PCEconomic/src/main/resources/static/sass/custom.scss
+++ b/public/PCEconomic/src/main/resources/static/sass/custom.scss
@@ -32,6 +32,8 @@
 @import "../../../../frontend/node_modules/bootstrap/scss/containers";
 @import "../../../../frontend/node_modules/bootstrap/scss/badge";
 @import "../../../../frontend/node_modules/bootstrap/scss/forms";
+@import "../../../../frontend/node_modules/bootstrap/scss/card";
+@import "../../../../frontend/node_modules/bootstrap/scss/images";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../../../frontend/node_modules/bootstrap/scss/utilities/api";
