--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -1,12 +1,31 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-</body>
+    <head th:replace="layout/layout.html :: head"></head>
+    <body>
+        <header th:replace="layout/layout.html :: header"></header>
+        <main class="container-lg">
+            <section id="slider-principal">
+                <img th:src="@{/img/static/slider.webp}" class="slider-principal" alt="slider-principal">
+            </section>
+            <section id="productes">
+                <div class="card" style="width: 18rem;" th:each="article : ${articles}">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${producte.nom}"></h5>
+                        <a class="btn btn-primary" th:href="/productes/${producte.id}">Go somewhere</a>
+                    </div>
+                </div>
+            </section>
+            <tr th:each="producto : ${productos}">
+                <td th:text="${producto.id}"></td>
+                <td th:text="${producto.nombre}"></td>
+                <td th:text="${producto.precio}"></td>
+                <td>
+                    <a th:href="@{/editar/{id}(id=${producto.id})}" class="btn btn-primary">Editar</a>
+                    <a th:href="@{/eliminar/{id}(id=${producto.id})}" class="btn btn-danger">Eliminar</a>
+                </td>
+            </tr>
+        </main>
+        <footer th:replace="layout/layout.html :: footer"></footer>
+    </body>
 </html>
