--- a/public/PCEconomic/src/main/resources/static/sass/custom.scss
+++ b/public/PCEconomic/src/main/resources/static/sass/custom.scss
@@ -3,6 +3,16 @@
 
 // 2. Include any default variable overrides here
 
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
+* {
+    font-family: 'Oswald', sans-serif;
+}
+
+.slider-principal {
+    height: 25vh;
+    width: 100%;
+}
+
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../../../../frontend/node_modules/bootstrap/scss/variables";
 
