--- a/public/PCEconomic/src/main/resources/static/sass/custom.scss
+++ b/public/PCEconomic/src/main/resources/static/sass/custom.scss
@@ -9,8 +9,16 @@
 }
 
 .slider-principal {
-    height: 25vh;
+    margin-top: 50px;
+    height: 30vh;
     width: 100%;
+}
+
+.size-card{
+    width: 250px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 // 3. Include remainder of required Bootstrap stylesheets
