--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -8,8 +8,8 @@
                 <img th:src="@{/img/static/slider.webp}" class="slider-principal" alt="slider-principal">
             </section>
             <section id="productes" class="row">
-                <div class="card col-4 m-3" style="width: 18rem;" th:each="article : ${articles}">
-                    <img th:src="..." class="card-img-top" alt="...">
+                <div class="card col-4 " th:each="article : ${articles}">
+                    <img th:src="@{/img/productes/{id}/{id}.jpg(id=${article.id})}" class="size-card" alt="...">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${article.nom}"></h5>
                     </div>
