--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -5,9 +5,13 @@
 
     <header th:replace="layout/layout.html :: header"></header>
     <main>
-
-        <p th:text="${article.nom}"></p>
-
+        <span th:each="foto : ${article.imatges}">
+            <img th:src="${foto.getPath()}" alt="...">
+        </span>
+        <p th:text="'Nom: ' + ${article.nom}"></p>
+        <p th:text="'Descripcio: ' + ${article.descripcio}"></p>
+        <p th:text="'Pes: ' + ${article.pes} + 'Kg'"></p>
+        <p th:text="'StockTotal: ' + ${article.stockTotal}"></p>
     </main>
     <footer th:replace="layout/layout.html :: footer"></footer>
 </body>
