--- a/public/PCEconomic/src/main/resources/static/sass/custom.scss
+++ b/public/PCEconomic/src/main/resources/static/sass/custom.scss
@@ -8,17 +8,27 @@
     font-family: 'Oswald', sans-serif;
 }
 
-.slider-principal {
-    margin-top: 50px;
-    height: 30vh;
-    width: 100%;
-}
-
 .size-card{
     width: 250px;
     height: 300px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.titolPrincipal{
+    font-size: 15px;
+    text-align: left;
+    color: #000000;
+}
+
+.titolSpan{
+    font-size: 15px;
+    text-align: left;
+    color: #8a8a8a;
+}
+
+.img-card{
+    height: 400px;
 }
 
 // 3. Include remainder of required Bootstrap stylesheets
@@ -52,6 +62,11 @@
 @import "../../../../frontend/node_modules/bootstrap/scss/forms";
 @import "../../../../frontend/node_modules/bootstrap/scss/card";
 @import "../../../../frontend/node_modules/bootstrap/scss/images";
+@import "../../../../frontend/node_modules/bootstrap/scss/tables";
+@import "../../../../frontend/node_modules/bootstrap/scss/breadcrumb";
+@import "../../../../frontend/node_modules/bootstrap/scss/buttons";
+@import "../../../../frontend/node_modules/bootstrap/scss/button-group";
+@import "../../../../frontend/node_modules/bootstrap/scss/close";
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../../../frontend/node_modules/bootstrap/scss/utilities/api";
