--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -4,34 +4,24 @@
 <body>
 <header th:replace="layout/layout.html :: header"></header>
 <main class="container">
+    <h1 class="text-left titolPrincipal col-6">Expertos en tecnología</h1>
     <section id="slider-principal " class="col-12 mt-5">
-        <h1 class="text-left titolPrincipal col-6">Expertos en tecnología</h1>
-        <span class="titolSpan col-6"> con un servicio 5 estrellas</span>
-        <img th:src="@{/img/static/slider.webp}" class="img-fluid col-12 " alt="slider-principal">
+        <img th:src="@{/img/static/slider.webp}" class="img-fluid col-12 h-50" alt="slider-principal">
     </section>
     <section id="productes" class="row mt-5">
-        <div class="card col-xs-12 col-sm-6 col-lg-4 col-xl-3 col-xxl-2" th:each="article : ${articles}">
-            <picture>
-                <div th:if="${article.id}">
-                    <img th:attr="srcset=@{/img/productes/{id}/{id}.jpg(id=${article.id})}" class="card-img-top img-card" >
+        <div class="card col-xs-12 col-sm-6 col-lg-4 " th:each="article : ${articles}">
+            <picture class="img-fluid">
+                <div th:if="${article.id}" class="col-12">
+                    <img th:attr="srcset=@{/img/productes/{id}/{id}.jpg(id=${article.id})}" class=" img-fluid  col-12" >
                 </div>
-                <div th:unless="${article.id}">
-                    <img th:attr="src=@{/img/static/no-picture/no-picture.jpg}" class="card-img-top" alt="Default Image">
+                <div th:unless="${article.id}" class="col-12">
+                    <img th:attr="src=@{/img/static/no-picture.jpg}" class=" img-fluid col-12" alt="Default Image">
                 </div>
                 </picture>
            <div class="card-body">
                 <h5 class="card-title" th:text="${article.nom}">Card title</h5>
             </div>
         </div>
-
-
-        <!--
-        <div class="card col-4 " th:each="article : ${articles}">
-            <img th:src="@{/img/productes/{id}/{id}.jpg(id=${article.id})}" class="size-card" alt="...">
-            <div class="card-body">
-                <h5 class="card-title" th:text="${article.nom}"></h5>
-            </div>
-        </div>-->
     </section>
 </main>
 <footer th:replace="layout/layout.html :: footer"></footer>
