--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -11,12 +11,12 @@
         <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
     </head>
     <header th:fragment="navbar">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-pc-economic-light">
             <div class="container-fluid">
                 <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Left</a>
+                            <a class="nav-link" th:href="@{/}"><img th:src="@{/img/static/logo.png}" class="logo"></a>
                         </li>
                     </ul>
                 </div>
