Changes in index.html and layout.html

--- a/public/PCEconomic/src/main/resources/static/sass/custom.scss
+++ b/public/PCEconomic/src/main/resources/static/sass/custom.scss
@@ -37,6 +37,13 @@
     height: 50px;
 }
 
+.slider-principal{
+    height: 30vh;
+}
+
+$pc-economic-dark: #4c0bce;
+$pc-economic-light: #712cf9;
+
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../../../../frontend/node_modules/bootstrap/scss/variables";
 
