--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -1,33 +1,28 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout.html :: head"></head>
-<body>
-<header th:replace="layout/layout.html :: header"></header>
-<main class="container">
-    <h1 class="text-left titolPrincipal col-6">Expertos en tecnología</h1>
-    <section id="slider-principal " class="col-12 mt-5">
-        <img th:src="@{/img/static/slider.webp}" class="img-fluid col-12 h-50" alt="slider-principal">
-    </section>
-    <section id="productes" class="row mt-5">
-        <div class="card col-xs-12 col-sm-6 col-lg-4 " th:each="article : ${articles}">
-            <picture class="img-fluid">
-                <div th:if="${article.id}" class="col-12">
-                    <img th:attr="srcset=@{/img/productes/{id}/{id}.jpg(id=${article.id})}" class=" img-fluid  col-12" >
+    <head th:replace="layout/layout.html :: head"></head>
+    <body>
+        <header th:replace="layout/layout.html :: header"></header>
+        <main class="container">
+            <section id="slider-principal " class="col-12 mt-5">
+                <img th:src="@{/img/static/slider.webp}" class="img-fluid col-12 h-50 slider-principal" alt="slider-principal">
+            </section>
+            <section id="productes" class="row mt-5">
+                <div class="card col-xs-12 col-sm-6 col-lg-4 " th:each="article : ${articles}">
+                    <div th:if="${article.id}" class="col-12">
+                        <img th:attr="srcset=@{/img/productes/{id}/{id}.jpg(id=${article.id})}"
+                             class=" img-fluid  col-12">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${article.nom}">Card title</h5>
+                    </div>
                 </div>
-                <div th:unless="${article.id}" class="col-12">
-                    <img th:attr="src=@{/img/static/no-picture.jpg}" class=" img-fluid col-12" alt="Default Image">
-                </div>
-                </picture>
-           <div class="card-body">
-                <h5 class="card-title" th:text="${article.nom}">Card title</h5>
-            </div>
-        </div>
-    </section>
-</main>
-<footer th:replace="layout/layout.html :: footer"></footer>
-</body>
-<script th:replace="layout/layout.html :: jquery"></script>
+            </section>
+        </main>
+        <footer th:replace="layout/layout.html :: footer"></footer>
+    </body>
+    <script th:replace="layout/layout.html :: jquery"></script>
 
-<script>
-</script>
+    <script>
+    </script>
 </html>
