--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -2,74 +2,73 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
     <head th:fragment="head">
         <meta charset="UTF-8"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+        <link href="https://fonts.googleapis.com" rel="preconnect">
+        <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
         <link rel="stylesheet" th:href="@{/css/custom.css}"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
         <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-    <script th:src="@{/js/bootstrap.min.js}"></script>
-    <script th:src="@{/js/bootstrap.esm.min.js}"></script>
-    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
+        <script th:src="@{/js/bootstrap.min.js}"></script>
+        <script th:src="@{/js/bootstrap.esm.min.js}"></script>
+        <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
     </head>
     <header th:fragment="navbar">
-        <nav class="navbar navbar-expand-md navbar-pc-economic-light">
+        <nav class="navbar navbar-expand-md navbar-pc-economic-light bg-pc-economic-light">
             <div class="container-fluid">
-                <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+                <div class="navbar-collapse collapse order-1 col-3">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" th:href="@{/}"><img th:src="@{/img/static/logo.png}" class="logo"></a>
+                            <a class="nav-link" th:href="@{/}"><img class="logo col-12"
+                                                                    th:src="@{/img/static/logo-no-background.png}"></a>
                         </li>
                     </ul>
                 </div>
-                <div class="mx-auto order-0">
+                <div class="mx-auto order-2 col-6">
                     <div class="col-12">
-                        <a class="navbar-brand mx-auto col-xs-9" href="#">Aqui va el cercador</a>
-                        <button class="navbar-toggler col-xs-3" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
+                        <form class="d-flex">
+                            <input aria-label="Search" class="form-control me-2" placeholder="Buscar" type="search">
+                            <button class="btn btn-success" type="submit"><i class="bi bi-search"></i></button>
+                        </form>
                     </div>
                 </div>
-                <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+                <button class="navbar-toggler" data-bs-target=".dual-collapse2" data-bs-toggle="collapse"
+                        type="button">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse order-3 col-3">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Right</a>
+                            <a class="nav-link btn btn-pc-economic-dark mr-4" th:href="@{/}">Mi cuenta</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link btn btn-pc-economic-dark" th:href="@{/}">
+                                <i class="bi bi-cart4"></i>
+                            </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top container"
+            th:fragment="footer">
 
-    <footer th:fragment="footer"
-            class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top container">
-
-        <p class="col-md-4 mb-0 text-muted">© 2022 Company, Inc</p>
-
-        <a href="/"
-           class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
-            <svg class="bi me-2" width="40" height="32">
+        <p class="col-md-4 mb-0 text-muted"> © 2023 PCEconomic Company, Inc y Multimedia SLU CIF B73347494. Ses
+            Tapereres, 32, 07500 Manacor, Balearic Islands</p>
+        <a class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
+           href="/">
+            <svg class="bi me-2" height="32" width="40">
                 <use xlink:href="#bootstrap"></use>
             </svg>
         </a>
-
-        <ul class="nav col-md-4 justify-content-end">
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-        </ul>
     </footer>
 
     <div th:fragment="jquery">
         <script>
-            src="https://code.jquery.com/jquery-3.6.3.min.js"
-            integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
-            crossorigin="anonymous"
+            src = "https://code.jquery.com/jquery-3.6.3.min.js"
+            integrity = "sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
+            crossorigin = "anonymous"
         </script>
-    </div>
+    </div>
