--- a/public/PCEconomic/src/main/resources/templates/index.html
+++ b/public/PCEconomic/src/main/resources/templates/index.html
@@ -5,18 +5,22 @@
         <header th:replace="layout/layout.html :: header"></header>
         <main class="container">
             <section id="slider-principal " class="col-12 mt-5">
-                <img th:src="@{/img/static/slider.webp}" class="img-fluid col-12 h-50 slider-principal" alt="slider-principal">
+                <img th:src="@{/img/static/slider.webp}" class="img-fluid col-12 h-50 slider-principal"
+                     alt="slider-principal">
             </section>
             <section id="productes" class="row mt-5">
-                <div class="card col-xs-12 col-sm-6 col-lg-4 " th:each="article : ${articles}">
-                    <div th:if="${article.id}" class="col-12">
-                        <img th:attr="srcset=@{/img/productes/{id}/{id}.jpg(id=${article.id})}"
-                             class=" img-fluid  col-12">
+                <a th:href="@{/article/{id}(id=${article.id})}" class="col-xs-12 col-sm-6 col-lg-4 text-center text-decoration-none"
+                   th:each="article : ${articles}">
+                    <div class="col-12">
+                        <div th:if="${article.id}" class="col-12">
+                            <img th:attr="srcset=@{/img/productes/{id}/{id}.jpg(id=${article.id})}"
+                                 class=" img-fluid  col-12">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title" th:text="${article.nom}">Card title</h5>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title" th:text="${article.nom}">Card title</h5>
-                    </div>
-                </div>
+                </a>
             </section>
         </main>
         <footer th:replace="layout/layout.html :: footer"></footer>
