--- a/public/PCEconomic/src/main/resources/static/sass/custom.scss
+++ b/public/PCEconomic/src/main/resources/static/sass/custom.scss
@@ -86,6 +86,8 @@ $theme-colors: map-merge($theme-colors, $custom-colors);
 @import "../../../../frontend/node_modules/bootstrap/scss/buttons";
 @import "../../../../frontend/node_modules/bootstrap/scss/button-group";
 @import "../../../../frontend/node_modules/bootstrap/scss/close";
+@import "../../../../frontend/node_modules/bootstrap/scss/offcanvas";
+
 
 // 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
 @import "../../../../frontend/node_modules/bootstrap/scss/utilities/api";
