--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -25,9 +25,16 @@
                         </li>
                     </ul>
                 </div>
+                <!-- Cercador -->
                 <div class="mx-auto order-2 col-6">
                     <div class="col-12">
                         <form class="d-flex">
+                            <!-- Categories Offcanvas -->
+                            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" aria-controls="offcanvas">
+                                Toggle static offcanvas
+                            </button>
+
+                            <!-- Buscar -->
                             <input aria-label="Search" class="form-control me-2" placeholder="Buscar" type="search">
                             <button class="btn btn-success" type="submit"><i class="bi bi-search"></i></button>
                         </form>
@@ -51,6 +58,7 @@
                 </div>
             </div>
         </nav>
+
     </header>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top container"
             th:fragment="footer">
@@ -70,5 +78,12 @@
             src = "https://code.jquery.com/jquery-3.6.3.min.js"
             integrity = "sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
             crossorigin = "anonymous"
+        </script>
+        <script>
+            $(document).ready(function () {
+                $('.navbar-toggler').click(function(){
+                    $('#navbarNav').toggle();
+                });
+            });
         </script>
     </div>
