new page categoria

--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -57,13 +57,17 @@
             <button class="nav-link btn btn-pc-economic-dark ml-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling">Todas las categorias</button>
         </nav>
 
-        <div class="offcanvas offcanvas-start" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Offcanvas with body scrolling</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        <div class="offcanvas offcanvas-start text-light" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1" id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+            <div class="offcanvas-header bg-pc-economic-default">
+                <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Todas las categorias :</h5>
+                <button type="button" class="btn-close " data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
-            <div class="offcanvas-body">
-                <p>Try scrolling the rest of the page to see this option in action.</p>
+            <div class="offcanvas-body text-dark">
+                <div th:each="categoria : ${categories}">
+                    <a th:href="@{/categoria/{id}(id=${categoria.id})}" th:text="${categoria.name}">
+
+                    </a>
+                </div>
             </div>
         </div>
     </header>
