--- a/public/PCEconomic/src/main/resources/templates/article.html
+++ b/public/PCEconomic/src/main/resources/templates/article.html
@@ -4,28 +4,28 @@
     <body>
 
         <header th:replace="layout/layout.html :: header"></header>
-        <main>
-            <div class="container d-flex flex-row">
-                <div>
-                 <span th:each="foto : ${article.imatges}">
-                    <img th:id="${foto.id}" style="height: 550px;" class="size-image-card" th:src="${foto.path}">
-                </span>
+        <main class="container">
+            <div class="col-12 row">
+                <div id="carouselExampleIndicators" class="carousel slide col-6">
+
+
+
                 </div>
-                <div class="d-flex flex-column">
-                    <h1 th:text="${article.nom}"></h1>
+
+                <div class="d-flex flex-column col-6">
+                    <h1 th:text="${article.nom}"> </h1>
                     <p th:text="'Marca: ' + ${article.marca.name} + ' - P/N: ' + ${article.marca.cif} "></p>
-                    <label>Cantidad:
-                        <input type="number" min="1" th:max="${article.stockTotal}"/>
-                    </label>
+                    <label for="cant"> Cantidad: </label>
+                    <input id="cant" type="number" min="1" th:max="${article.stockTotal}"/>
                     <div class="d-flex flex-row">
-                        <button>Me Gusta</button>
-                        <button>Añadir al Carrito</button>
-                        <button>Comprar</button>
+                        <button class="btn btn-pc-economic-light">Me Gusta</button>
+                        <button class="btn btn-pc-economic-light">Añadir al Carrito</button>
+                        <button class="btn btn-pc-economic-dark">Comprar</button>
                     </div>
                 </div>
             </div>
 
-            <div class="container">
+            <div>
                 <h2>Descripción</h2>
                 <p th:text="${article.descripcio}"></p>
             </div>
