--- a/public/PCEconomic/src/main/resources/templates/layout/layout.html
+++ b/public/PCEconomic/src/main/resources/templates/layout/layout.html
@@ -87,7 +87,7 @@
     </nav>
 
     <div
-      class="offcanvas offcanvas-start text-light"
+      class="offcanvas offcanvas-start text-light mt-5"
       data-bs-scroll="true"
       data-bs-backdrop="false"
       tabindex="-1"
